--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -28,7 +28,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+.center {
+  display: flex;
+  justify-content: space-between;
+}
 @media (min-width: 767.98px) {
   .pt-160 {
     padding-top: 10rem;
